--- a/packages/ui-kit/src/scss/tailwind.scss
+++ b/packages/ui-kit/src/scss/tailwind.scss
@@ -892,9 +892,6 @@ video {
 .right-3 {
 	right: 0.75rem;
 }
-.-top-3 {
-	top: -0.75rem;
-}
 .-bottom-px {
 	bottom: -1px;
 }
@@ -1101,9 +1098,6 @@ video {
 .mt-2 {
 	margin-top: 0.5rem;
 }
-.mt-3 {
-	margin-top: 0.75rem;
-}
 .-mr-1 {
 	margin-right: -0.25rem;
 }
@@ -1284,9 +1278,6 @@ video {
 }
 .w-40 {
 	width: 10rem;
-}
-.w-80 {
-	width: 20rem;
 }
 .w-32 {
 	width: 8rem;
@@ -1903,12 +1894,6 @@ video {
 .pl-3 {
 	padding-left: 0.75rem;
 }
-.pt-4 {
-	padding-top: 1rem;
-}
-.pb-2 {
-	padding-bottom: 0.5rem;
-}
 .pl-12 {
 	padding-left: 3rem;
 }
@@ -2495,43 +2480,43 @@ tr:focus-visible{
 .explorer-wrapper {
   max-height: calc(100vh - 25px);
 }
-.GET{
+.GET:not(.tab-icon){
   color: var(--req-get);
 }
-.POST{
+.POST:not(.tab-icon){
   color: var(--req-post);
 }
-.PUT{
+.PUT:not(.tab-icon){
   color: var(--req-put);
 }
-.DELETE{
+.DELETE:not(.tab-icon){
   color: var(--req-delete);
 }
-.PATCH{
+.PATCH:not(.tab-icon){
   color: var(--req-patch);
 }
-.HEAD{
+.HEAD:not(.tab-icon){
   color: var(--req-head);
 }
-.OPTIONS{
+.OPTIONS:not(.tab-icon){
   color: var(--req-options);
 }
-.PURGE{
+.PURGE:not(.tab-icon){
   color: var(--req-purge);
 }
-.LINK{
+.LINK:not(.tab-icon){
   color: var(--req-link);
 }
-.UNLINK{
+.UNLINK:not(.tab-icon){
   color: var(--req-unlink);
 }
-.GRAPHQL{
+.GRAPHQL:not(.tab-icon){
   color: var(--req-graphql);
 }
-.WEBSOCKET{
+.WEBSOCKET:not(.tab-icon){
   color: var(--req-websocket);
 }
-.SOCKETIO{
+.SOCKETIO:not(.tab-icon){
   color: var(--req-socketio);
 }
 .hide-action:hover .action {
